--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<section class="banner">
 			<div class="container">
 				<div class="banner-left">
-					<img src="img/rikismaja.jpg">
+					<img src="img/rikismaja.JPG">
 					<h2>Hai...<br>
 						Saya adalah seorang <span class="efek-ngetik"></span></h2>
 					<p>Selamat datang di website portfolio saya!</p>
